# dissertation_rag

./: .env  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  start_services.sh
conf/: logging.yml
dashboard/fast-api/: main_api.py
dashboard/flask-app/: app.py
data/03_output/: adjacency_dict.pkl  v1_output.prof
docs/source/: conf.py  index.rst
evaluation/: evaluation_tests.ipynb  test_cases.yml  total_results_v0_tests.pkl
notebooks/: analysis_dev.ipynb  dev.ipynb  dev2_boogaloo.ipynb  document_rag.ipynb  duckdb_dev.ipynb  eval_dev.ipynb  evaluation.ipynb  extract_dev.ipynb  generate_synthetic_qa.ipynb  graph_test.ipynb  hyperparam_tuning.ipynb  initial_dev.ipynb  multiproc_test.ipynb  nn_training.ipynb  notes_dev.ipynb  notes_scrape_test.py  retriever_comparisons.ipynb  struct_dev.ipynb  v1_algo.ipynb
notebooks/.ipynb_checkpoints/: document_rag-checkpoint.ipynb
src/StructuredRag.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/algorithms/: abstract_retriever.py  v0.py  v0_retrieval.py  v1.py  v2.py  v2_retrieval.py  v3.py  v4.py  v4_retrieval.py  v5.py
src/etl/: embedding_funcs.py  etl_funcs.py
src/etl_module/: embedding_functions.py  etl_functions.py
src/evaluation/: graph_scoring.py
src/evaluation_module/: evaluation_functions.py  graph_scoring_functions.py  output_functions.py
src/processing/: distance_metrics.py  graph_construction.py  param_tuning.py
src/processing_module/: distance_metrics.py  multiprocessed_graph.py  v0_retrieval.py  v1_retrieval.py  v2_retrieval.py  v3_retrieval.py  (+1 more)
tests/: test_run.py
(+27 files in other folders)
